Schulungsunterlagen/03-extended-concepts/01-ingress-gateway/yaml/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  labels:
    team: app
spec:
  parentRefs:
  - name: web
    namespace: infra
    sectionName: http
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: frontend
      port: 8080
